--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KYC Fraud Detection</title>
+    <title>Automation Testing </title>
 </head>
   
 <body>
-    <h1>Automation Testing Demo</h1>
+    <h1>AI-Automation Testing Demo</h1>
     <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
     
     
