--- a/webapp/static/style.css
+++ b/webapp/static/style.css
@@ -1,41 +1,44 @@
 /* Apply styles to the entire body */
 body {
     font-family: Arial, sans-serif;
-    background-color: #2c6ed5;
+    background-color: #f6f6f6;
     margin: 0;
     padding: 0;
     text-align: center;
 }
 
 /* Style the header */
-h1 {
-    background-color: #333;
+h1, h2 {
+    background-color: #424141;
     color: #fff;
     padding: 10px 0;
     margin-bottom: 20px;
-}
-h2 {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
+    max-width: 620px;
+    margin: 3px auto; /* Note: This property is present in both h1 and h2 rules; you might want to adjust or remove it */
+    border-radius: 5px;
     margin-bottom: 20px;
 }
 
 /* Style the form container */
 form {
-    background-color: #edecec;
+    background-color: rgba(51, 50, 50, 0.5); /* Adjust the alpha channel (0.5 for 50% transparency) */
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 10px rgba(104, 103, 103, 0.2);
     padding: 10px;
     max-width: 600px;
     margin: 2px auto;
 }
 
+
 /* Style form labels and inputs */
 label {
     display: block;
     margin-bottom: 10px;
+    font-weight: bold;
+    color: white;
+    font-size: 22px; /* You can adjust the size as needed */
 }
+
 
 label [name="feedback"] {
     display: block;
@@ -43,6 +46,8 @@ label [name="feedback"] {
     width: 97%;
     height: 50%;
     padding: 20px;
+    font-size: 22px; /* You can adjust the size as needed */
+
 }
 
 select[name="gender"] {
@@ -51,6 +56,8 @@ select[name="gender"] {
     margin-bottom: 20px;
     border: 2px solid #ccc;
     border-radius: 4px;
+    font-size: 22px; /* You can adjust the size as needed */
+
 
 }
 
@@ -60,19 +67,28 @@ input[type="file"] {
     width: 90%;
     padding: 20px;
     margin-bottom: 20px;
-    border: 2px solid #ccc;
+    border: 2px solid #6a6565;
     border-radius: 4px;
+    font-size: 20px; /* You can adjust the size as needed */
+
 }
 
 
 /* Style the submit button */
 input[type="submit"] {
     background-color: #e41f1f;
-    color: #fff;
+    color: #efdbdb;
     border: none;
     padding: 15px 30px;
     border-radius: 4px;
     cursor: pointer;
 }
 
+@import "compass/css3";
+
+/* // Font imports */
+
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
+
+/* ########################################## */
 
